# just_code

./: .gitignore  README.md  binary_search.py  compare_strings.py  domino_rotations.py  f_heap.py  fill_matrix.py  fruit_baskets.py  fruits_basket.py  give_change.py  k_closest.py  key_formating.py  keyboard.py  knapsack.py  largest_subarray.py  max_profit.py  min_days_to_bloom.py  quick_select.py  rotate_matrix.py  search_pattern.py  stores_houses.py  sub_decreasing.py  sum_submins.py  watering_flowers.py
cpp/: avl.cpp  main  main.cpp
cpp/src/avl/: CMakeLists.txt  package.xml
cpp/src/avl/include/avl/: avl.h
cpp/src/avl/src/: avl.cpp
cpp/src/bst/: CMakeLists.txt  package.xml
cpp/src/bst/include/bst/: bst.h
cpp/src/bst/src/: bst.cpp
cpp/src/double_linked_list/: CMakeLists.txt  package.xml
cpp/src/double_linked_list/include/double_linked_list/: double_linked_list.h
cpp/src/double_linked_list/src/: double_linked_list.cpp
cpp/src/linked_list/: CMakeLists.txt  package.xml
cpp/src/linked_list/include/linked_list/: linked_list.h
cpp/src/linked_list/src/: linked_list.cpp
cpp/src/min_heap/: CMakeLists.txt  package.xml
cpp/src/min_heap/include/min_heap/: min_heap.h
cpp/src/min_heap/src/: min_heap.cpp
cpp/src/queue/: CMakeLists.txt  package.xml
cpp/src/queue/include/queue/: queue.h
cpp/src/queue/src/: queue.cpp
cpp/src/segment_tree/: CMakeLists.txt  package.xml
cpp/src/segment_tree/include/segment_tree/: segment_tree.h
cpp/src/segment_tree/src/: segment_tree.cpp
cpp/src/splay_tree/: CMakeLists.txt  package.xml
cpp/src/splay_tree/include/splay_tree/: splay_tree.h
cpp/src/splay_tree/src/: splay_tree.cpp
cpp/src/stack/: CMakeLists.txt  package.xml
cpp/src/stack/include/stack/: stack.h
cpp/src/stack/src/: stack.cpp
cpp/src/treap/: CMakeLists.txt  package.xml
cpp/src/treap/include/treap/: treap.h
cpp/src/treap/src/: treap.cpp
lists/: linked_list.py  reverse_linked_list.py
python/: anagrams.py  binary_distance.py  chairs.py  tests.py  ugly_numbers.py  unique_email.py
python/algorithms/: README.md  __init__.py  bellman_ford.py  bfs.py  boyer_moore.py  bs.py  bubble_sort.py  dfs.py  dijkstra.py  dinic.py  floyd_warshall.py  gcd.py  heap_sort.py  hopcroft_karp.py  insertion_sort.py  kruskal.py  merge_sort.py  prim.py  quick_select.py  quick_sort.py  r_quick_sort.py  selection_sort.py  sssp_dp.py  tarjan.py  tests.py  welsh_powell.py
python/classics/: game_of_life.py  knapsack.py  longest_common_substring.py  max_change.py  running_median.py  traveling_salesman.py
python/data_structures/: README.md  __init__.py  avl.py  bit_mask.py  bst.py  disjoint_set.py  double_linked_list.py  fenwick_tree.py  graph.py  linked_list.py  max_heap.py  min_heap.py  network_graph.py  queue.py  radix_trie.py  rb_tree.py  segment_tree.py  skip_list.py  splay_tree.py  stack.py  tests.py  treap.py  trie.py  ugraph.py  uwgraph.py  van_emde_boas.py  wgraph.py
python/leetcode/: .matrix.py.swo  2d_arrays.py  a_tale_of_two_stacks.py  abreviation.py  alternating_characters.py  anagrams.py  array_manipulation.py  array_pairs.py  balanced_brackets.py  bigger_is_greater.py  binary_search.py  boggle_board.py  candies.py  castle_grid.py  common_child.py  components_in_a_graph.py  connected_cell_in_a_grid.py  contacts.py  contains_substring.py  count_sets.py  count_triplets.py  counting_invertions.py  crossword_puzzle.py  davis_staircase.py  decibinary_numbers.py  detect_cycle.py  down_to_zero_ii.py  find_maximum_index_product.py  find_merge_point_of_two_lists.py  find_rectangles.py  find_the_nearest_clone.py  flipping_bits.py  forming_a_magic_square.py  fraudulent_activity.py  frequency_queries.py  friend_circle_queries.py  game_of_life.py  game_of_two_stacks.py  greddy_florist.py  height_of_a_binary_tree.py  (+58 more)
python/lists/: linked_list.py  r_linked_list.py
python/to_sort/: r_insertion.py
python/trees/: avl_tree.py  heap.py
to_sort/: bubble.py  insertion.py  merge.py  quicksort.py
trees/: avl_tree.py  binary_tree.py  heap.py
